--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 *{
     margin: 0;
-    padding: 0%;
+    padding: 0;
     box-sizing: border-box;
 
 }
@@ -10,4 +10,30 @@ body{
     background: honeydew;
     color: black;
 
+}
+
+
+.booklist{
+    width: 90vw;
+    max-width: 1170px;
+    margin: 5 rem auto;
+    display: grid;
+    gap: 2rem;
+}
+
+@media screen and (min-width:768px){
+    .booklist{
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+}
+
+.bookname{
+    background: wheat;
+    border-radius: 1rem;
+    padding: 1rem 2rem;
+}
+
+.book h1{
+    margin-top: 0.5rem;
 }
